# axis_camera

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  README.rst  axis.launch  axis_boot.launch  axis_ptz.launch  conf.py  diag.yaml  index.rst  manifest.xml  package.xml  rosdoc.yaml  setup.py  stack.xml
axis_camera/: CHANGELOG.rst  CMakeLists.txt  README.md  conf.py  flake8.ini  index.rst  package.xml  setup.cfg  setup.py
axis_camera/axis_camera/: axis_camera.py  axis_camera_node.py  axis_ptz.py  cam_info_utils.py  camera_info_manager.py
axis_camera/config/: axis_dome_ptz.yaml  axis_dome_ptz_inverted.yaml  axis_fixed.yaml  axis_q62.yaml  teleop_ps4.yaml  teleop_ps4_alt.yaml
axis_camera/launch/: axis.launch  axis_camera.launch
axis_camera/nodes/: axis.py  axis_camera_node  axis_ptz.py  axis_teleop_node  teleop.py  teleop_speed_control.py
axis_camera/src/axis_camera/: axis_camera.py  axis_ptz.py  axis_video.py  scratch.py
axis_camera/test/: test_flake8.py  test_pep257.py
axis_camera_ros2/: package.xml  setup.cfg  setup.py
axis_camera_ros2/axis_camera_ros2/: axis_camera.py  axis_camera_node.py  cam_info_utils.py  camera_info_manager.py  helloworld.py
axis_camera_ros2/test/: test_flake8.py  test_pep257.py
axis_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
axis_description/config/: gazebo_ptz_controllers.yaml
axis_description/meshes/: axis_q62_base.stl  axis_q62_top.stl
axis_description/urdf/: axis_dome_fixed.urdf.xacro  axis_dome_ptz.urdf.xacro  axis_q62.urdf.xacro
axis_msgs/: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml
axis_msgs/msg/: Axis.msg  Ptz.msg
axis_msgs/srv/: SetFloat.srv  SetInt.srv
cfg/: Camera.cfg  PTZ.cfg  VideoStream.cfg
doc/: axis.rst  axis_camera.rst  axis_camera.wiki  axis_ptz.rst  conf.py  index.rst  manifest.yaml
launch/: axis.launch  axis_gscam.launch  axis_standalone_view.rviz
meshes/: pan_head.blend  pan_head.dae  stand.blend  stand.dae  tilt_head.blend  tilt_head.dae
msg/: Axis.msg  PTZ.msg  PointInRectangle.msg
nodes/: axis.py  axis_all.py  axis_ptz.py  axis_twist.py  keyboard_teleop.py  look_at.py  publish_axis_tf.py  teleop.py  teleop_speed_control.py  teleop_twist.py
scripts/axis_camera/: __init__.py  camera_control.py  dynamic_reconfigure_server2.py  dynamic_reconfigure_tools.py  position_streaming.py  streaming.py  vapix.py  video_streaming.py
src/: republish.cpp
srv/: SetParameters.srv  TakeSnapshot.srv
test/: axis.launch
tests/: axis.launch  axis_all.launch  axis_debug.launch  axis_ptz.launch  axis_teleop.launch  axis_theora.launch  axis_twist.launch  default_calibration.yaml  gscam.launch  gscam_jpeg.launch  republish.launch  test_absolute.launch  test_flipped_speed_control.launch  test_look_at.py  test_speed_control.launch  view_axis.launch
urdf/: axis_214_PTZ.urdf  axis_214_PTZ_standalone.xacro
