<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>axis_camera</name>
  <version>0.0.0</version>
  <description>AXIS ROS2 package</description>
  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/axis_camera</url>
  <url type="repository">https://github.com/ros-drivers/axis_camera</url>
  <url type="bugtracker">https://github.com/ros-drivers/axis_camera/issues</url>

  <author email="quentin.picard@vedecom.fr">Quentin Picard</author>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>axis_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
