<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>axis_description</name>
  <version>2.0.0</version>
  <description>Description package with URDF files for common Axis fixed and PTZ cameras</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</author>
  <author email="ssharp@clearpathrobotics.com">Stephen Sharp</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>