<package format="3">

  <name>axis_msgs</name>
  <version>0.5.2</version>
  <description>
    ROS messages used by the axis_camera package to control Axis PTZ and fixed cameras
  </description>
  <maintainer email="quentin.picard@vedecom.fr">Quentin Picard</maintainer>
  <author>Quentin Picard</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/axis_camera</url>
  <url type="repository">https://github.com/ros-drivers/axis_camera</url>
  <url type="bugtracker">https://github.com/ros-drivers/axis_camera/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
  </export>

</package>
