<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>axis_msgs</name>
  <version>2.0.0</version>
  <description>
    ROS messages used by the axis_camera package to control Axis PTZ and fixed cameras
  </description>
  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/axis_camera</url>
  <url type="repository">https://github.com/ros-drivers/axis_camera</url>
  <url type="bugtracker">https://github.com/ros-drivers/axis_camera/issues</url>

  <author email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</author>
  <author>Ryan Gariepy</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
  </export>

</package>
